Ajuste no comportamento dos links de rodapé

--- a/_i18n/pt/_posts/api-cielo/2003-03-03-split.md
+++ b/_i18n/pt/_posts/api-cielo/2003-03-03-split.md
@@ -1,9 +1,9 @@
 ---
 layout: manual
-title: Split
+title: Split API e-Commerce Cielo
 description: Manual integração técnica via API Split
 search: true
-translated: true
+toc_footers: true
 categories: manual
 tags:
   - API e-Commerce Cielo
@@ -18,9 +18,9 @@ O Split de Pagamentos permite a divisão de uma transação entre diferentes par
 
 Muito utilizado em Marketplaces, onde **o carrinho é composto por produtos de diferentes fornecedores** e o valor total da venda deve ser dividido entre os participantes.
 
-| **Participantes** | **Descrição** | 
+| **Participantes** | **Descrição** |
 |-----------|---------- |
-| **Marketplace** | Responsável pelo carrinho. <BR> Possui **Subordinados** que fornecem os produtos presentes no carrinho.<BR> Define um MDR\* e uma Tarifa Fixa (opcional) a serem descontados sobre a venda do **Subordinado**.<BR>  | 
+| **Marketplace** | Responsável pelo carrinho. <BR> Possui **Subordinados** que fornecem os produtos presentes no carrinho.<BR> Define um MDR\* e uma Tarifa Fixa (opcional) a serem descontados sobre a venda do **Subordinado**.<BR>  |
 | **Subordinado** | Fornecedor dos produtos que compõem o carrinho.<BR>Recebe parte do valor da venda, descontado o MDR\* acordado com o **Marketplace**.<BR>  |
 | **Braspag (Facilitador)** | Responsável pelo fluxo transacional.<BR> Define um MDR\* e uma Tarifa Fixa a serem descontados sobre o valor total da venda realizada pelo **Marketplace**.<br> Responsável pela liquidação dos pagamentos para os **Subordinados** e **Marketplace**.|
 
@@ -30,16 +30,16 @@ Muito utilizado em Marketplaces, onde **o carrinho é composto por produtos de d
 
 No Split de Pagamentos o responsável pelo fluxo transacional é o facilitador.
 
-O Marketplace se integra à Braspag para transacionar e informa como será dividida a transação entre cada participante, podendo ser no momento de captura ou em um momento posterior, conhecido como split pós-transacional, desde que seja dentro de um limite de tempo pré-estabelecido. 
+O Marketplace se integra à Braspag para transacionar e informa como será dividida a transação entre cada participante, podendo ser no momento de captura ou em um momento posterior, conhecido como split pós-transacional, desde que seja dentro de um limite de tempo pré-estabelecido.
 
-Com a transação capturada, a Braspag calcula o valor destinado a cada participante e repassa esses valores, no prazo estabelecido de acordo com cada produto (regime de pagamento\*), para cada envolvido na transação. 
+Com a transação capturada, a Braspag calcula o valor destinado a cada participante e repassa esses valores, no prazo estabelecido de acordo com cada produto (regime de pagamento\*), para cada envolvido na transação.
 
 > **Regime de Pagamento**: Prazo estabelecido para liquidação de acordo com o produto (crédito ou débito) e bandeira.<BR>
 > **Crédito**: Em até 31 dias.<BR>
 > **Crédito** Parcelado: 1º parcela em até 31 dias, demais a cada 30.<BR>
 > **Débito**: Em até 1 dia útil<BR>
 
-Para utilizar o Split de Pagamentos, o **Marketplace** deverá se cadastrar na Braspag juntamente com seus **Subordinados**. Após este processo, tanto o **Marketplace** quanto seus **Subordinados** possuirão um identificador único, conhecido como **MerchantId (MID)**, que deverá ser utlizado ao informar as regras de divisão de uma transação. 
+Para utilizar o Split de Pagamentos, o **Marketplace** deverá se cadastrar na Braspag juntamente com seus **Subordinados**. Após este processo, tanto o **Marketplace** quanto seus **Subordinados** possuirão um identificador único, conhecido como **MerchantId (MID)**, que deverá ser utlizado ao informar as regras de divisão de uma transação.
 
 A divisão de uma transação deve serguir as seguintes regras:
 
@@ -47,7 +47,7 @@ A divisão de uma transação deve serguir as seguintes regras:
 * Os valores de participação de cada **Subordinado**. O somatório deverá ser igual ao valor total da transação.
 * MDRs + Tarifas Fixas (opcional) a serem aplicados sobre o valor de cada **Subordinado** que será destinado ao **Marketplace**. Deverá ser acordado previamente entre o **Marketplace** e o **Subordinado**.
 
-O **Marketplace** também pode ser um participante da divisão. Para isso basta informar seu identificador na divisão, passando o mesmo a ter também o papel de **Subordinado** e ter seus próprios produtos no carrinho. 
+O **Marketplace** também pode ser um participante da divisão. Para isso basta informar seu identificador na divisão, passando o mesmo a ter também o papel de **Subordinado** e ter seus próprios produtos no carrinho.
 
 ## Taxas
 
@@ -64,11 +64,11 @@ O **Marketplace**, de conhecimento destas taxas, negociará o seu **MDR(%)** e u
 O desconto da **Tarifa Fixa(R$)**, acordado entre o **Marketplace** e a **Braspag**, não é aplicado no valor total da transação, não entrando no cálculo da divisão e sim sendo debitado do montante que o **Marketplace** tem para receber junto à **Braspag**. O **MDR(%)** entra no cálculo de divisão da transação, já que o mesmo deve estar embutido no **MDR(%)** acordado entre o **Marketplace** e seus **Subordinados.**
 
 > **Custo para o Marketplace:** MDR Braspag(%) + Tarifa Fixa(R$)
-> O **MDR(%)** acordado entre um **Marketplace** e um **Subordinado** deve ser sempre maior que o **MDR(%)** acordado entre a **Braspag** e o **Marketplace**. 
+> O **MDR(%)** acordado entre um **Marketplace** e um **Subordinado** deve ser sempre maior que o **MDR(%)** acordado entre a **Braspag** e o **Marketplace**.
 
 ### Marketplace
 
-O **Marketplace** é responsável por acordar as taxas a serem cobradas de seus **Subordinados**, onde deve ser defindo um **MDR(%)** maior ou igual ao **MDR(%)** definido entre a **Braspag** e o **Marketplace** e uma **Tarifa Fixa(R$)**, que é opcional. 
+O **Marketplace** é responsável por acordar as taxas a serem cobradas de seus **Subordinados**, onde deve ser defindo um **MDR(%)** maior ou igual ao **MDR(%)** definido entre a **Braspag** e o **Marketplace** e uma **Tarifa Fixa(R$)**, que é opcional.
 
 > **Custo para o Subordinado:** MDR Marketplace(%) + Tarifa Fixa(R$), onde no MDR Marketplace(%) está embutido o MDR Braspag(%).
 
@@ -125,7 +125,7 @@ A autorização de uma transação no Split de Pagamentos deve ser realizada atr
 
 Porém, para indentificar que a transação enviada se trata de uma transação de Split de Pagamentos, deve-se modificar o tipo de pagamento utilizado, conforme abaixo:
 
-|=                     | **Cartão de Crédito** | **Cartão de Débito**  | 
+|=                     | **Cartão de Crédito** | **Cartão de Débito**  |
 |---------------------|------------------------|-----------------------|
 | **Transação Comum** | CreditCard             | DebitCard             |
 | **Transação Split** | SplittedCreditCard     | SplittedDebitCard     |
@@ -165,10 +165,10 @@ Ao informar um tipo de pagamento referente ao Split, a API Cielo e-Commerce auto
 Caso a transação enviada seja marcada para captura automática, o nó contendo as regras de divisão deverá ser enviado, caso contrário a transação será dividida entre a **Braspag** e o **Marketplace**. Posteriormente é permitido que o **Marketplace** envie novas regras de divisão para a transação através da API de divisão pós-transacional, desde que esteja dentro do período de tempo permitido.
 
 **Exemplo 1)**  
-  
+
 Transação no valor de **R$100,00** sem o nó contendo as regras de divisão.
 
-**Taxa Braspag**: 2% MDR + R$0,30 Tarifa Fixa. 
+**Taxa Braspag**: 2% MDR + R$0,30 Tarifa Fixa.
 
 ```
 {
@@ -198,7 +198,7 @@ Neste caso o **Marketplace** recebe o valor da transação descontado o MDR acor
 ![Split](https://docsbraspag.github.io/SplitBraspag/images/Split/Split001.PNG)
 
 **Exemplo 2)**  
-  
+
 Transação no valor de **R$100,00** com o nó contendo as regras de divisão.
 
 **Taxa Braspag**: 2% MDR + R$0,30 Tarifa Fixa.  
@@ -260,7 +260,7 @@ O Split de Pagamentos possui dois modelos básicos de integração:
 | **Split Pós-Transacional** | O **Marketplace** envia as regras de divisão após a captura da transação.
 
 > O Split de Pagamentos só é realizado para transações capturadas, ou seja, o mesmo só será considerado para autorizações com captura automática e no momento da captura de uma transação. Caso seja informado no momento de uma autorização sem captura automática, as regras de divisão serão desconsideradas.
-  
+
 <BR>
 
 #### Split Transacional
@@ -319,7 +319,7 @@ Como resposta, A API Cielo E-Commerce retornará na resposta um nó contento as 
 | `SplitPayments.Splits.Amount`            | Parte do valor calculado da transação a ser recebido pelo **Subordinado** ou **Marketplace**, já descontando todas as taxas (MDR e Tarifa Fixa) | Inteiro | -      | Sim         |
 
 **Exemplo**  
-  
+
 Transação no valor de **R$100,00** com o nó contendo as regras de divisão.
 
 **Taxa Braspag**: 2% MDR + R$0,30 Tarifa Fixa.  
@@ -412,11 +412,11 @@ Transação no valor de **R$100,00** com o nó contendo as regras de divisão.
                 },
                 "Splits": [
                     {
-                        "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950", 
+                        "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950",
                         "amount": 210,    
                     },
                     {
-                        "MerchantId": "0f377932-5668-4c72-8b5b-2b43760ebd38", 
+                        "MerchantId": "0f377932-5668-4c72-8b5b-2b43760ebd38",
                         "amount": 5670,    
                     }
                 ]
@@ -430,11 +430,11 @@ Transação no valor de **R$100,00** com o nó contendo as regras de divisão.
                 },
                 "Splits": [
                     {
-                        "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950", 
+                        "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950",
                         "amount": 95,    
                     },
                     {
-                        "MerchantId": "98430463-7c1e-413b-b13a-0f613af594d8", 
+                        "MerchantId": "98430463-7c1e-413b-b13a-0f613af594d8",
                         "amount": 3825,    
                     }
                 ]
@@ -514,7 +514,7 @@ grant_type=client_credentials
 > O ClientId é o mesmo utilizado na integração com a API Cielo E-Commerce, conhecido como MerchantId. O ClientSecret deve ser obtido junto à Braspag.
 
 O token retornado (access_token) deverá ser utilizado em toda requisição à API do Split como uma chave de autorização. O mesmo possui uma validade de 20 minutos e deverá ser obtido um novo token toda vez que o mesmo expirar.  
-  
+
 Com o token de acesso, é possível realizar um requisição à API do Split para enviar as regras de divisão de uma transação.  
 
 `REQUEST`  
@@ -558,11 +558,11 @@ RESPONSE
         },
         "Splits": [
             {
-                "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950", 
+                "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950",
                 "amount": 210,    
             },
             {
-                "MerchantId": "0f377932-5668-4c72-8b5b-2b43760ebd38", 
+                "MerchantId": "0f377932-5668-4c72-8b5b-2b43760ebd38",
                 "amount": 5670   
             }
         ]
@@ -576,11 +576,11 @@ RESPONSE
         },
         "Splits": [
             {
-                "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950", 
+                "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950",
                 "amount": 95,    
             },
             {
-                "MerchantId": "98430463-7c1e-413b-b13a-0f613af594d8", 
+                "MerchantId": "98430463-7c1e-413b-b13a-0f613af594d8",
                 "amount": 3825    
             }
         ]
@@ -648,11 +648,11 @@ GET https://{API Cielo E-Commerce (consulta)}/1/sales/{PaymentId}
                 },
                 "Splits": [
                     {
-                        "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950", 
+                        "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950",
                         "amount": 210,    
                     },
                     {
-                        "MerchantId": "0f377932-5668-4c72-8b5b-2b43760ebd38", 
+                        "MerchantId": "0f377932-5668-4c72-8b5b-2b43760ebd38",
                         "amount": 5670,    
                     }
                 ]
@@ -666,11 +666,11 @@ GET https://{API Cielo E-Commerce (consulta)}/1/sales/{PaymentId}
                 },
                 "Splits": [
                     {
-                        "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950", 
+                        "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950",
                         "amount": 95,    
                     },
                     {
-                        "MerchantId": "98430463-7c1e-413b-b13a-0f613af594d8", 
+                        "MerchantId": "98430463-7c1e-413b-b13a-0f613af594d8",
                         "amount": 3825,    
                     }
                 ]
@@ -699,7 +699,7 @@ GET https://{API Cielo E-Commerce (consulta)}/1/sales/{PaymentId}
 
 ### Captura
 
-Ao capturar uma transação do Split de Pagamentos o **Marketplace** deve informar as regras de divisão da mesma. Caso não informe, será gerada a divisão da transação entre o **Marketplace** e a **Braspag**, tanto para **captura do valor total** quanto para **captura de um valor parcial**. 
+Ao capturar uma transação do Split de Pagamentos o **Marketplace** deve informar as regras de divisão da mesma. Caso não informe, será gerada a divisão da transação entre o **Marketplace** e a **Braspag**, tanto para **captura do valor total** quanto para **captura de um valor parcial**.
 
 #### Captura Total
 
@@ -748,11 +748,11 @@ PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/capture
             },
             "Splits": [
                 {
-                    "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950", 
+                    "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950",
                     "amount": 210,    
                 },
                 {
-                    "MerchantId": "0f377932-5668-4c72-8b5b-2b43760ebd38", 
+                    "MerchantId": "0f377932-5668-4c72-8b5b-2b43760ebd38",
                     "amount": 5670,    
                 }
             ]
@@ -766,11 +766,11 @@ PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/capture
             },
             "Splits": [
                 {
-                    "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950", 
+                    "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950",
                     "amount": 95,    
                 },
                 {
-                    "MerchantId": "98430463-7c1e-413b-b13a-0f613af594d8", 
+                    "MerchantId": "98430463-7c1e-413b-b13a-0f613af594d8",
                     "amount": 3825,    
                 }
             ]
@@ -795,7 +795,7 @@ Exemplo considerando transação no valor de **R$100,00** e as seguinte taxas:
 
 **Taxa Braspag**: 2% MDR + R$0,30 Tarifa Fixa.  
 **Taxa Marketplace com o Subordinado 01**: 5% MDR, já embutindo os 2% do MDR Braspag + 0,30 Tarifa Fixa.  
-**Taxa Marketplace com o Subordinado 02**: 4% MDR, já embutindo os 2% do MDR Braspag + 0,15 Tarifa Fixa. 
+**Taxa Marketplace com o Subordinado 02**: 4% MDR, já embutindo os 2% do MDR Braspag + 0,15 Tarifa Fixa.
 
 #### Captura Parcial
 
@@ -844,11 +844,11 @@ PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/capture?amount=8000
             },
             "Splits": [
                 {
-                    "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950", 
+                    "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950",
                     "amount": 150,    
                 },
                 {
-                    "MerchantId": "0f377932-5668-4c72-8b5b-2b43760ebd38", 
+                    "MerchantId": "0f377932-5668-4c72-8b5b-2b43760ebd38",
                     "amount": 3770,    
                 }
             ]
@@ -862,11 +862,11 @@ PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/capture?amount=8000
             },
             "Splits": [
                 {
-                    "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950", 
+                    "MerchantId": "cd16ab8e-2173-4a16-b037-36cd04c07950",
                     "amount": 95,    
                 },
                 {
-                    "MerchantId": "98430463-7c1e-413b-b13a-0f613af594d8", 
+                    "MerchantId": "98430463-7c1e-413b-b13a-0f613af594d8",
                     "amount": 3825,    
                 }
             ]
@@ -891,7 +891,7 @@ Exemplo considerando transação no valor de **R$100,00**, captura parcial de **
 
 **Taxa Braspag**: 2% MDR + R$0,30 Tarifa Fixa.  
 **Taxa Marketplace com o Subordinado 01**: 5% MDR, já embutindo os 2% do MDR Braspag + 0,30 Tarifa Fixa.  
-**Taxa Marketplace com o Subordinado 02**: 4% MDR, já embutindo os 2% do MDR Braspag + 0,15 Tarifa Fixa. 
+**Taxa Marketplace com o Subordinado 02**: 4% MDR, já embutindo os 2% do MDR Braspag + 0,15 Tarifa Fixa.
 
 ### Cancelamento
 
@@ -939,7 +939,7 @@ PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/void
 
 <BR>
 No cancelamento parcial, o somatório dos valores cancelados definidos para cada **Subordinado** não poderão ultrapassar o valor total do cancelamento parcial.  
-  
+
 Os valores cancelados serão sensibilizados nas respectivas agendas dos **Subordinados**.
 
 `REQUEST`
@@ -993,4 +993,4 @@ PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/void?amount=2000
 
 ## Agenda
 
-> Em breve disponibilizaremos a API de Agenda onde será possível consultar a agenda do **Markectplace** e seus **Subordinados**. 
+> Em breve disponibilizaremos a API de Agenda onde será possível consultar a agenda do **Markectplace** e seus **Subordinados**.
