--- a/_i18n/pt/_posts/api-cielo/2003-03-03-faq-api-3.0.md
+++ b/_i18n/pt/_posts/api-cielo/2003-03-03-faq-api-3.0.md
@@ -1,15 +1,12 @@
 ---
 layout: faq
-title: FAQ
+title: FAQ API e-Commerce Cielo
 description: Respostas para perguntas frequentes feitas pelos desenvolvedores durante a integração com a API Cielo.
 search: true
+toc_footers: true
 categories: faq
 tags:
   - API e-Commerce Cielo
-toc_footers:
-  - <a href='/Webservice-3.0/'>Integração API Cielo eCommerce</a>
-  - <a href='/Guia-de-migracao-1.5x3.0/'>Guia de migração da API 1.5 para a API Cielo eCommerce</a>
-search: true
 ---
 
 # Dúvidas de negócio
