--- a/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
@@ -1,14 +1,12 @@
 ---
 layout: tutorial
 title:  Postman Cielo
-description: O Postman é um API Client que facilita aos desenvolvedores criar, compartilhar, testar e documentar APIs. 
+description: O Postman é um API Client que facilita aos desenvolvedores criar, compartilhar, testar e documentar APIs.
 search: true
+toc_footers: true
 categories: tutorial
 tags:
   - Documentos Adicionais
-toc_footers:
-  - <a href='/Webservice-3.0/'>Integração API Cielo eCommerce</a>
-  - <a href='/Checkout-Cielo/'>Integração Checkout Cielo</a>
 ---
 
 # O que é o POSTMAN?
