--- a/_i18n/pt/_posts/api-cielo/2003-03-03-faq-api-3.0.md
+++ b/_i18n/pt/_posts/api-cielo/2003-03-03-faq-api-3.0.md
@@ -1,6 +1,6 @@
 ---
 layout: faq
-title: FAQ API e-Commerce Cielo
+title: FAQ
 description: Respostas para perguntas frequentes feitas pelos desenvolvedores durante a integração com a API Cielo.
 search: true
 toc_footers: true
