--- a/_i18n/pt/_posts/api-cielo/2003-03-03-split.md
+++ b/_i18n/pt/_posts/api-cielo/2003-03-03-split.md
@@ -1,6 +1,6 @@
 ---
 layout: manual
-title: Split API e-Commerce Cielo
+title: Split de pagamentos
 description: Manual integração técnica via API Split
 search: true
 toc_footers: true
