Fix Recursos e Entidades, correções json

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -494,6 +494,9 @@ Exemplo de resposta:
     "price": 5250,
     "created_at": "2016-09-06T19:09:49Z",
     "updated_at": "2016-09-06T19:09:49Z",
+    "order_type": "PAYMENT",
+    "merchant": "0010920335960001",
+    "source_id": "4QeQD63ZeKsz",
     "items": [{
             "id": "0687f00a-0aea-48f7-85d0-64bc31977734",
             "sku": "0000001",
@@ -568,6 +571,9 @@ Exemplo de resposta:
     "price": 5250,
     "created_at": "2016-09-06T19:09:49Z",
     "updated_at": "2016-09-06T19:09:49Z",
+    "order_type": "PAYMENT",
+    "merchant": "0010920335960001",
+    "source_id": "4QeQD63ZeKsz",
     "items": [{
             "id": "0687f00a-0aea-48f7-85d0-64bc31977734",
             "sku": "0000001",
@@ -611,10 +617,9 @@ Exemplo de resposta:
 Esse recurso realiza a alteração do status de um pedido criado. O id do pedido é utilizado para realizar a chamada.
 
 As possíveis alterações de status são:
-* place (Liberar um pedido para pagamento, exibir pedido na Cielo LIO)
-* pay (Alterar um pedido para pago)
-* close (Fechar um pedido)
-* canceled (cancelar pedido)
+* PLACE (Liberar um pedido para pagamento, exibir pedido na Cielo LIO)
+* PAY (Alterar um pedido para pago)
+* CLOSE (Fechar um pedido)
 
 > Endpoint:
 > 
@@ -700,6 +705,7 @@ Exemplo de requisição:
 ```json
 {
     "sku": "ede8f84a8b8645cb8e576a593c25c6ed",
+    "name": "produto 1"
     "unit_price": 500,
     "quantity": 2,
     "unit_of_measure": "EACH"
@@ -750,6 +756,7 @@ Exemplo de resposta:
 [{
         "id": 1,
         "sku": "ede8f84a8b8645cb8e576a593c25c6ed",
+        "name": "produto 1"
         "unit_price": 500,
         "quantity": 2,
         "unit_of_measure": "EACH"
@@ -757,6 +764,7 @@ Exemplo de resposta:
     {
         "id": 2,
         "sku": "c2f5fb9a5542406e8b7917892329cda8",
+        "name": "produto 1"
         "unit_price": 1500,
         "quantity": 3,
         "unit_of_measure": "EACH"
@@ -923,6 +931,7 @@ Exemplo de resposta:
 ```json
 [{
     "id": "ede8f84a8b8645cb8e576a593c25c6ed",
+    "external_id": "40578a65-939e-4613-b8c1-9e7358c6c256",
     "transaction_type": "PAYMENT",
     "status": "CONFIRMED",
     "terminal_number": "928273921",
