--- a/_i18n/pt/_posts/api-cielo/2003-03-03-faq-api-3.0.md
+++ b/_i18n/pt/_posts/api-cielo/2003-03-03-faq-api-3.0.md
@@ -5,6 +5,7 @@ description: Respostas para perguntas frequentes feitas pelos desenvolvedores du
 search: true
 toc_footers: true
 categories: faq
+sort_order: 4
 tags:
   - API e-Commerce Cielo
 ---
