Updated '_i18n/pt/_posts/api-cielo/2003-03-03-split.md' via CloudCannon

--- a/_i18n/pt/_posts/api-cielo/2003-03-03-split.md
+++ b/_i18n/pt/_posts/api-cielo/2003-03-03-split.md
@@ -5,6 +5,7 @@ description: Manual integração técnica via API Split
 search: true
 toc_footers: true
 categories: manual
+sort_order: 3
 tags:
   - API e-Commerce Cielo
 language_tabs:
