Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -5,6 +5,7 @@ description: Integração técnica via API
 search: true
 translated: true
 categories: manual
+sort_order: 1
 tags:
   - Cielo LIO
 language_tabs:
