Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
@@ -12,9 +12,9 @@ tags:
 
 A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório oficial CIELO:
 
-|Android                                                            |iOS                                                               |
-|-------------------------------------------------------------------|------------------------------------------------------------------|
-|![**Android**](https://github.com/DeveloperCielo/API-3.0-Android)  |[**iOS**](https://github.com/DeveloperCielo/API-3.0-iOS)          |
+|Android                                                           |iOS                                                               |
+|----------------------------------------------------------------- |------------------------------------------------------------------|
+|[**Android**](https://github.com/DeveloperCielo/API-3.0-Android)  |[**iOS**](https://github.com/DeveloperCielo/API-3.0-iOS)          |
 
 |SDK|
 |---|
@@ -23,4 +23,17 @@ A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório ofici
 |[**Python**](https://github.com/DeveloperCielo/API-3.0-Python)    |
 |[**Ruby**](https://github.com/DeveloperCielo/API-3.0-Ruby)        |
 
+## Sem link 
+
 ![**Android**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/01-sdk-android.png)
+
+## Teste 01
+
+[![Android]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)
+
+## Teste 02
+
+![Banana](http://cdn.osxdaily.com/wp-content/uploads/2013/07/dancing-banana.gif "Olha a banana dançando!")
+
+## Teste 03
+[![Android]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)
