Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
@@ -37,3 +37,12 @@ A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório ofici
 
 ## Teste 03
 [![Android]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)
+
+# SDKs
+
+![**Android**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/01-sdk-android.png)
+![**Java**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/04-sdk-java.png)
+![**PHP**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/07-sdk-php.png)
+![**Python**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/08-sdk-python.png)
+![**Ruby**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/09-sdk-ruby.png)
+![**iOS**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/08-sdk-ios.jpg)
