Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
@@ -17,6 +17,10 @@ A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório ofici
 |----------------------------------------------------------------- |------------------------------------------------------------------|
 |[**Android**](https://github.com/DeveloperCielo/API-3.0-Android)  |[**iOS**](https://github.com/DeveloperCielo/API-3.0-iOS)          |
 
+|Android                                                           |iOS                                                               |
+|----------------------------------------------------------------- |------------------------------------------------------------------|
+|[![Android]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android) |[**iOS**](https://github.com/DeveloperCielo/API-3.0-iOS)          |
+
 |SDK|
 |---|
 |[**PHP**](https://github.com/DeveloperCielo/API-3.0-PHP)          |
