Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
@@ -9,39 +9,28 @@ tags:
   - API e-Commerce Cielo
 ---
 
-# SDKs
+# SDKs Api e-Commerce Cielo
 
 A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório oficial CIELO:
 
 |Android                                                           |iOS                                                               |
 |----------------------------------------------------------------- |------------------------------------------------------------------|
-|[**Android**](https://github.com/DeveloperCielo/API-3.0-Android)  |[**iOS**](https://github.com/DeveloperCielo/API-3.0-iOS)          |
-
-|Android                                                           |iOS                                                               |
-|----------------------------------------------------------------- |------------------------------------------------------------------|
 |[![Android]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android) |[**iOS**](https://github.com/DeveloperCielo/API-3.0-iOS)          |
 
-|SDK|
+|Links|
 |---|
 |[**PHP**](https://github.com/DeveloperCielo/API-3.0-PHP)          |
 |[**JAVA**](https://github.com/DeveloperCielo/API-3.0-Java)        |
 |[**Python**](https://github.com/DeveloperCielo/API-3.0-Python)    |
 |[**Ruby**](https://github.com/DeveloperCielo/API-3.0-Ruby)        |
+|[**iOS**](https://github.com/DeveloperCielo/API-3.0-iOS)          |
 
-## Sem link 
+[![**Android**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)
+[![**Java**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/04-sdk-java.png)](https://github.com/DeveloperCielo/API-3.0-Java)
+[![**PHP**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/07-sdk-php.png)](https://github.com/DeveloperCielo/API-3.0-PHP) 
+[![**Python**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/08-sdk-python.png)](https://github.com/DeveloperCielo/API-3.0-Python)
+[![**Ruby**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/09-sdk-ruby.png)](https://github.com/DeveloperCielo/API-3.0-Ruby)
 
-![**Android**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/01-sdk-android.png)
+# SDKs Cielo LIO
 
-## Teste 01
-
-[![Android]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)
-[!Android]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)
-
-# SDKs
-
-![**Android**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/01-sdk-android.png)
-![**Java**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/04-sdk-java.png)
-![**PHP**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/07-sdk-php.png)
-![**Python**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/08-sdk-python.png)
-![**Ruby**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/09-sdk-ruby.png)
-![**iOS**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/08-sdk-ios.jpg)
+# SDKs Webservice 1.5
