Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
@@ -13,10 +13,6 @@ tags:
 
 A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório oficial CIELO:
 
-|Android                                                           |iOS                                                               |
-|----------------------------------------------------------------- |------------------------------------------------------------------|
-|[![Android]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android) |[**iOS**](https://github.com/DeveloperCielo/API-3.0-iOS)          |
-
 |Links|
 |---|
 |[**PHP**](https://github.com/DeveloperCielo/API-3.0-PHP)          |
@@ -30,6 +26,10 @@ A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório ofici
 [![**PHP**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/07-sdk-php.png)](https://github.com/DeveloperCielo/API-3.0-PHP) 
 [![**Python**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/08-sdk-python.png)](https://github.com/DeveloperCielo/API-3.0-Python)
 [![**Ruby**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/09-sdk-ruby.png)](https://github.com/DeveloperCielo/API-3.0-Ruby)
+
+| | |
+|-|-|
+|[![**Java**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/04-sdk-java.png)](https://github.com/DeveloperCielo/API-3.0-Java)|[![**Ruby**]({{ site.baseurl_root }}/images/ApiCieloecommerce/SDKs/09-sdk-ruby.png)](https://github.com/DeveloperCielo/API-3.0-Ruby)|
 
 # SDKs Cielo LIO
 
