Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
@@ -30,6 +30,7 @@ A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório ofici
 | | |
 |-|-|
 |[![**Java**]({{ site.baseurl_root }}/images/SDKs/04-sdk-java.png)](https://github.com/DeveloperCielo/API-3.0-Java)|[![**Ruby**]({{ site.baseurl_root }}/images/SDKs/09-sdk-ruby.png)](https://github.com/DeveloperCielo/API-3.0-Ruby)|
+|[![**Java**]({{ site.baseurl_root }}/images/SDKs/04-sdk-java.png)](https://github.com/DeveloperCielo/API-3.0-Java)|[![**Ruby**]({{ site.baseurl_root }}/images/SDKs/09-sdk-ruby.png)](https://github.com/DeveloperCielo/API-3.0-Ruby)|
 
 # SDKs Cielo LIO
 
