--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
@@ -13,7 +13,7 @@ tags:
 
 A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório oficial CIELO:
 
-[![**iOS**]({{ site.baseurl_root }}/images/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)
+[![**iOS**]({{ site.baseurl_root }}/images/SDKs/01-sdk-ios)](https://github.com/DeveloperCielo/API-3.0-iOS)
 [![**Android**]({{ site.baseurl_root }}/images/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)
 [![**Java**]({{ site.baseurl_root }}/images/SDKs/04-sdk-java.png)](https://github.com/DeveloperCielo/API-3.0-Java)
 [![**PHP**]({{ site.baseurl_root }}/images/SDKs/07-sdk-php.png)](https://github.com/DeveloperCielo/API-3.0-PHP) 
@@ -27,20 +27,21 @@ A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório ofici
 
 # SDKs Cielo LIO
 
-|Tipo|SDK                                                                |
-|----|-------------------------------------------------------------------|
-|Sample|[**Integração Local**](https://github.com/DeveloperCielo/API-3.0-Android)  |
-|**Android**|[**Integração Remota**](https://github.com/DeveloperCielo/API-3.0-iOS)          |
-|**PHP**|[**Integração Remota**](https://github.com/DeveloperCielo/API-3.0-PHP)          |
-|**Java**|[**Integração Remota**](https://github.com/DeveloperCielo/API-3.0-Java)        |
-|**CSharp**|[**Integração Remota**](https://github.com/DeveloperCielo/API-3.0-Python)    |
+| Tipo                 | SDK                                                                                                 |
+|----------------------|-----------------------------------------------------------------------------------------------------|
+| **Sample**           | [**Integração Local**](https://github.com/DeveloperCielo/LIO-SDK-Sample-Integracao-Local)           |
+| **Order Management** | [**Integração Local**](https://github.com/DeveloperCielo/order-management)                          |
+| **Android**          | [**Integração Remota**](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android) |
+| **PHP**              | [**Integração Remota**](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP)     |
+| **Java**             | [**Integração Remota**](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java)    |
+| **CSharp**           | [**Integração Remota**](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP)  |
 
 # SDKs Webservice 1.5
 
 # base
 
-|SDK                                                                |
-|-------------------------------------------------------------------|
+|SDK                                                               |
+|------------------------------------------------------------------|
 |[**Android**](https://github.com/DeveloperCielo/API-3.0-Android)  |
 |[**iOS**](https://github.com/DeveloperCielo/API-3.0-iOS)          |
 |[**PHP**](https://github.com/DeveloperCielo/API-3.0-PHP)          |
