Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
@@ -11,19 +11,20 @@ tags:
 
 # SDKs Api e-Commerce Cielo
 
+|SDK Mobile                                                        |                                                                  |
+|------------------------------------------------------------------|------------------------------------------------------------------|
+|[**Android**](https://github.com/DeveloperCielo/API-3.0-Android)  |[**iOS**](https://github.com/DeveloperCielo/API-3.0-iOS)          |
+
+
+|SDK                                                               |
+|------------------------------------------------------------------|
+|[**PHP**](https://github.com/DeveloperCielo/API-3.0-PHP)          |
+|[**JAVA**](https://github.com/DeveloperCielo/API-3.0-Java)        |
+|[**Python**](https://github.com/DeveloperCielo/API-3.0-Python)    |
+|[**Ruby**](https://github.com/DeveloperCielo/API-3.0-Ruby)        |
+
+
 A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório oficial CIELO:
-
-[![**iOS**]({{ site.baseurl_root }}/images/SDKs/01-sdk-ios)](https://github.com/DeveloperCielo/API-3.0-iOS)
-[![**Android**]({{ site.baseurl_root }}/images/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)
-[![**Java**]({{ site.baseurl_root }}/images/SDKs/04-sdk-java.png)](https://github.com/DeveloperCielo/API-3.0-Java)
-[![**PHP**]({{ site.baseurl_root }}/images/SDKs/07-sdk-php.png)](https://github.com/DeveloperCielo/API-3.0-PHP) 
-[![**Python**]({{ site.baseurl_root }}/images/SDKs/08-sdk-python.png)](https://github.com/DeveloperCielo/API-3.0-Python)
-[![**Ruby**]({{ site.baseurl_root }}/images/SDKs/09-sdk-ruby.png)](https://github.com/DeveloperCielo/API-3.0-Ruby)
-
-| | |
-|-|-|
-|[![**Java**]({{ site.baseurl_root }}/images/SDKs/04-sdk-java.png)](https://github.com/DeveloperCielo/API-3.0-Java)|[![**Ruby**]({{ site.baseurl_root }}/images/SDKs/09-sdk-ruby.png)](https://github.com/DeveloperCielo/API-3.0-Ruby)|
-|[![**Java**]({{ site.baseurl_root }}/images/SDKs/04-sdk-java.png)](https://github.com/DeveloperCielo/API-3.0-Java)|[![**Ruby**]({{ site.baseurl_root }}/images/SDKs/09-sdk-ruby.png)](https://github.com/DeveloperCielo/API-3.0-Ruby)|
 
 # SDKs Cielo LIO
 
@@ -48,3 +49,15 @@ A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório ofici
 |[**JAVA**](https://github.com/DeveloperCielo/API-3.0-Java)        |
 |[**Python**](https://github.com/DeveloperCielo/API-3.0-Python)    |
 |[**Ruby**](https://github.com/DeveloperCielo/API-3.0-Ruby)        |
+
+|1|2|3|4|5|6|
+|-|-|-|-|-|-|
+|[![**iOS**]({{ site.baseurl_root }}/images/SDKs/01-sdk-ios)](https://github.com/DeveloperCielo/API-3.0-iOS)|[![**Android**]({{ site.baseurl_root }}/images/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)|[![**Java**]({{ site.baseurl_root }}/images/SDKs/04-sdk-java.png)](https://github.com/DeveloperCielo/API-3.0-Java)|[![**PHP**]({{ site.baseurl_root }}/images/SDKs/07-sdk-php.png)](https://github.com/DeveloperCielo/API-3.0-PHP) |[![**Python**]({{ site.baseurl_root }}/images/SDKs/08-sdk-python.png)](https://github.com/DeveloperCielo/API-3.0-Python)
+[![**Ruby**]({{ site.baseurl_root }}/images/SDKs/09-sdk-ruby.png)](https://github.com/DeveloperCielo/API-3.0-Ruby)|
+
+[![**iOS**]({{ site.baseurl_root }}/images/SDKs/01-sdk-ios)](https://github.com/DeveloperCielo/API-3.0-iOS)
+[![**Android**]({{ site.baseurl_root }}/images/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)
+[![**Java**]({{ site.baseurl_root }}/images/SDKs/04-sdk-java.png)](https://github.com/DeveloperCielo/API-3.0-Java)
+[![**PHP**]({{ site.baseurl_root }}/images/SDKs/07-sdk-php.png)](https://github.com/DeveloperCielo/API-3.0-PHP) 
+[![**Python**]({{ site.baseurl_root }}/images/SDKs/08-sdk-python.png)](https://github.com/DeveloperCielo/API-3.0-Python)
+[![**Ruby**]({{ site.baseurl_root }}/images/SDKs/09-sdk-ruby.png)](https://github.com/DeveloperCielo/API-3.0-Ruby)
