Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
@@ -51,7 +51,7 @@ A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório ofici
 
 |1|2|
 |-|-|
-|[![**iOS**]({{ site.baseurl_root }}/images/SDKs/01-sdk-ios)](https://github.com/DeveloperCielo/API-3.0-iOS)|[![**Android**]({{ site.baseurl_root }}/images/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)
+|[![**iOS**]({{ site.baseurl_root }}/images/SDKs/01-sdk-ios.png)](https://github.com/DeveloperCielo/API-3.0-iOS)|[![**Android**]({{ site.baseurl_root }}/images/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)
 
 |3|4|5|6|
 |-|-|-|-|
